  and filmographies of staff members
+ imdb_person: New method born() to retrieve birthdate and place
+ imdb_person: New method died() does the same for day of death (including
  cause, if available)
* links to staff members on the demo imdb.php page now pointing to the new
  imdb_person.php instead of the IMDB site to give insight into the new classes
  capabilities

v1.0.1 (07.05.2008)
-------------------
* code reorganization: Split up the imdb class to create class imdb_base
+ the photo methods now support an optional parameter to retrieve a bigger
  (400x600) image instead of the thumbnail (100x140)
* rewrote alsoknow() to give even better/more matches
! in quotes(), references pointed to the local server instead of imdb site
* replaced hardcoded imdb sites in the demo page by the imdb site configured
! plotoutline() and tagline() were broken due to IMDB site changes
* some optimization of tagline() and plotoutline()
! rating() and votes() returned -1 when movie was not yet rated

v1.0.0 (04.05.2008)
-------------------
! little fix for the MPAA retrieval (thanx to aaron pointing this out and
  providing the fix)
+ added some more checks on valid image and cache directories to prevent
  PHP warnings/errors
+ adding some more comments to the API documentation
! alsoknow() sometimes messed up some AKAs - hopefully fixed.
* some style changes to the demo pages
! method country() was broken (site changes?) - fixed.

v0.9.5 (03.04.2008)
-------------------
* renamed imdb_config.php to imdb_config.class.php
* updated cache page layout
* changed Makefile: the classfiles now go to /usr/share/php which is the PHP
  include_path in the distributions php.ini - this means you no longer need
  to include these files with your apps RPM/DEB packages, but simply add the
  appropriate dependency (and include them directly via the include_path)
! imdb::alsoknow() messed things up on akas.imdb.com if AKA string contained
  only one term in parenthesis