@@ -158,7 +158,7 @@ if (isset ($_GET["mid"])) {
     echo "<table align='left' border='1' style='border-collapse:collapse;background-color:#ddd;'><tr><th style='background-color:#07f;'>Actor</th><th style='background-color:#07f;'>Role</th></tr>";
     for ($i = 0; $i < count($director); $i++) {
       echo '<tr><td width=200>';
-      echo '<a href="imdb_person.php?mid='.substr($director[$i]["imdb"],2).'">';
+      echo '<a href="imdb_person.php?mid='.$director[$i]["imdb"].'">';
       echo $director[$i]["name"].'</a></td><td>';
       echo $director[$i]["role"]."</td></tr>";
     }
@@ -172,7 +172,7 @@ if (isset ($_GET["mid"])) {
     echo "<table align='left' border='1' style='border-collapse:collapse;background-color:#ddd;'><tr><th style='background-color:#07f;'>Actor</th><th style='background-color:#07f;'>Role</th></tr>";
     for ($i = 0; $i < count($write); $i++) {
       echo '<tr><td width=200>';
-      echo '<a href="imdb_person.php?mid='.substr($write[$i]["imdb"],2).'">';
+      echo '<a href="imdb_person.php?mid='.$write[$i]["imdb"].'">';
       echo $write[$i]["name"].'</a></td><td>';
       echo $write[$i]["role"]."</td></tr>";
     }
@@ -187,7 +187,7 @@ if (isset ($_GET["mid"])) {
     echo "<table align='left' border='1' style='border-collapse:collapse;background-color:#ddd;'><tr><th style='background-color:#07f;'>Actor</th><th style='background-color:#07f;'>Role</th></tr>";
     for ($i = 0; $i < count($produce); $i++) {
       echo '<tr><td width=200>';
-      echo '<a href="imdb_person.php?mid='.substr($produce[$i]["imdb"],2).'">';
+      echo '<a href="imdb_person.php?mid='.$produce[$i]["imdb"].'">';
       echo $produce[$i]["name"].'</a></td><td>';
       echo $produce[$i]["role"]."</td></tr>";
     }
@@ -201,7 +201,7 @@ if (isset ($_GET["mid"])) {
     echo "<table align='left' border='1' style='border-collapse:collapse;background-color:#ddd;'><tr><th style='background-color:#07f;'>Actor</th><th style='background-color:#07f;'>Role</th></tr>";
     for ($i = 0; $i < count($compose); $i++) {
       echo '<tr><td width=200>';
-      echo '<a href="imdb_person.php?mid='.substr($compose[$i]["imdb"],2).'">';
+      echo '<a href="imdb_person.php?mid='.$compose[$i]["imdb"].'">';
       echo $compose[$i]["name"]."</a></td></tr>";
     }
     echo "</table></td></tr>\n";
@@ -215,7 +215,7 @@ if (isset ($_GET["mid"])) {
     echo "<table align='left' border='1' style='border-collapse:collapse;background-color:#ddd;'><tr><th style='background-color:#07f;'>Actor</th><th style='background-color:#07f;'>Role</th></tr>";
     for ($i = 0; $i < count($cast); $i++) {
       echo '<tr><td width=200>';
-      echo '<a href="imdb_person.php?mid='.substr($cast[$i]["imdb"],2).'">';
+      echo '<a href="imdb_person.php?mid='.$cast[$i]["imdb"].'">';
       echo $cast[$i]["name"].'</a></td><td>';
       echo $cast[$i]["role"]."</td></tr>";
     }
